objects/LAT_objectPerformance__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>EndDate__c  - StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duração</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LATContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Contract</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipName>LAT_Objects_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Data Início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signature Flux duration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LAT Performance</label>
    <nameField>
        <displayFormat>LOP-{00000}</displayFormat>
        <label>LAT_objectPerformance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Performance</pluralLabel>
    <recordTypes>
        <fullName>Contract_Time</fullName>
        <active>true</active>
        <label>Contract Time</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>